--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site is created by Jayashri Masilamani. It uses data from mapbox.com and weather stack.com</p>
         <img class='portrait' src="./img/me.jpg" alt="">
     </div>
     {{>footer}}
